--- a/h2wp.tex
+++ b/h2wp.tex
@@ -1824,10 +1824,9 @@ $ 2^{2 \times 2} = 16 $
 \solution*{پاسخ صحیح}
 
 چون نمی‌توانیم به چپ و پایین حرکت کنیم پس برای رسیدن به رأس‌های پایین‌ترین ردیف تنها یک حالت وجود دارد(باید تمام یال‌های افقی رئوس پایین‌ترین ردیف به هم متصل باشند)
-    ، همچنین برای رسیدن به رأس‌های چپ‌ترین ستون نیز تنها یک حالت وجود دارد(باید تمام یال‌های عمودی رئوس چپ‌ترین ردیف به هم متصل باشند) تعداد رئوس باقیمانده نیز برابر است با:
-        $(3n - 1)(3n - 1)$
-
-    دو حالت جهت دسترسی به این رئوس وجود دارد از طریق پایین و یا چپ که دقیقا یکی از این دو مسیر باید باز باشد (اتصال رأس به یکی ازدو رأس چپ یا پایین) پس در کل می‌شود: 
+    ، همچنین برای رسیدن به رأس‌های چپ‌ترین ستون نیز تنها یک حالت وجود دارد(باید تمام یال‌های عمودی رئوس چپ‌ترین ردیف به هم متصل باشند). تعداد رئوس باقیمانده نیز برابر است با:
+        $(3n - 1)(3n - 1)$ .
+دو حالت جهت دسترسی به این رئوس وجود دارد از طریق پایین و یا چپ که دقیقا یکی از این دو مسیر باید باز باشد (اتصال رأس به یکی ازدو رأس چپ یا پایین) پس در کل می‌شود: 
    ${{2}^{(3n-1)(3n-1)}} $
    
  \question
