--- a/h2wp.tex
+++ b/h2wp.tex
@@ -1862,8 +1862,7 @@ $w$
 \Enote{n333}
   این که گراف ستاره یک کران پایین برای این ناوردا باشد شرط لازم است اما کافی نیست و برای اثبات حکم باید نشان داد که این گراف تنها
    کران پایین برای این ناوردا است. 
-\Nnote{n334}
-  در اینجا رسم شکل گراف پس از تغییر می‌توانست به فهم بهتر روند اثبات کمک کند.
+
 \Enote{n335}
   حالت 
   $n=3$
@@ -1876,9 +1875,37 @@ $w$
   
     از برهان خلف استفاده می‌کنیم.
     
-    فرض کنیم $T$ درختی است که روی آن نمی‌توان عمل جابجایی را انجام داد و ستاره نیست. از آنجایی که هر درخت به جز ستاره یک مسیر سه یالی دارد. یکی از این مسیرها را در درخت $T$  $abcd$ می‌نامیم. با حذف سه یال این مسیر هر کدام از رئوس در مؤلفه یکی از این چهار رأس قرار می‌گیرند. طبق تقارن می‌توان بدون تغییر در کلیت مسئله تعداد رأس‌های مؤلفه $b$ را از تعداد رأس‌های مؤلفه $c$ بیشتر در نظر گرفت. اگر یال بین$d$  و $c$ را قطع کنیم و  $b$  را به  $d$  متصل کنیم مجموع فواصل کاهش پیدا می‌کند (فواصل بین مؤلفه  $d$ با مؤلفه‌های  $a$ و  $b$یکی کم شده و فواصل بین مؤلفه‌های  $d$ و  $c$یکی زیاد شده است و اندازه مؤلفه  $b$به تنهایی از  $c$ بیشتر است) که این خلاف فرض است.
+    فرض کنید درختی وجود دارد که ستاره نیست و نمی‌توان روی آن عمل جابجایی را انجام داد. این درخت را $T$ می نامیم.
+    
+    در درخت     
+    $T$
+    حداقل یک مسیر شامل سه یال وجود دارد, یکی از این مسیرها
+     را
+            $abcd$
+        می‌نامیم. با حذف سه یال این مسیر, درخت به چهار مولفه همبندی تقسیم می شود. مولفه‌ای که شامل راس 
+   $x$ 
+    است را با
+    $G_x$
+نشان می‌دهیم. با توجه به تقارن بین دو راس
+$c$
+و
+$b$
+ و بدون تغییر در کلیت مسئله می‌توان فرض کرد که
+ $n(G_b)\geq n(G_c)$
+ .حال اگر در درخت 
+ $T$
+ یال بین$d$  و $c$ را قطع کنیم و  $b$  را به  $d$  متصل کنیم اگر گراف جدید را 
+$T'$ 
+ بنامیم, 
+ داریم:
+ \[dis(T')=dis(T)-n(G_d)(n(G_b)+n(G_a))+n(G_d)n(G_c)\]
+ (فواصل بین رئوس مؤلفه  $G_d$ با رئوس مؤلفه‌های  $G_a$ و  $G_b$ یک واحد کاهش یافته و فواصل بین رئوس دو مؤلفه‌  $G_d$ و  $G_c$ یک واحد افزایش یافته است. )
+ 
+ اما داریم:
+ \[n(G_b)\geq n(G_c)\rightarrow n(G_d)(n(G_b)+n(G_a)-n(G_c))>0\]\[\rightarrow dis(T)-n(G_d)(n(G_b)+n(G_a)-n(G_c))<dis(T)\rightarrow dis(T')<dis(T)\]
+  که این خلاف فرض و تناقض است.
      
-     پس در نتیجه حکم اثبات شده است.
+     پس در نتیجه فرض خلف باطل و حکم اثبات شده است.
     
   
 \end{document}
