--- a/h2wp.tex
+++ b/h2wp.tex
@@ -2,7 +2,7 @@
 
 \newcommand{\eventclass}{ریاضیات گسسته}
 \newcommand{\eventtype}{افکار سازگار ، نوشتار نابکار}
-\newcommand{\eventcntrbs}{سودابه محمدهاشمی - کیمیا محمدطاهری}
+\newcommand{\eventcntrbs}{دانشکده برق و کامپیوتر دانشگاه تهران}
 
 \begin{document}
 \maketitle
@@ -911,7 +911,7 @@ $ x_1 $
 لازم است که گام ناوردا ذکر و اثبات شود.
 \Enote{n36}
 اثبات حکم‌های اشاره شده ضروری است .
-\Enote{n37}
+\Enote{n337}
 لازم است به استفاده از پیوستگی گسسته در این اثبات اشاره شود.
 \solution*{پاسخ صحیح}
 
@@ -1358,7 +1358,7 @@ $n$
 \refnote{n20}
 هر جمله باید از جملات قبلی و یا اصول پایه نتیجه گرفته شود.
 
-\Nnote{n45}
+\Nnote{n338}
 یکی از چراغ خطرهای در طول اثبات استفاده از «و .../و غیره/...» است. این کلمات به خودی خود بد نیستند، اما زمانی که ما می‌توانیم از علایم اختصاری استفاده کنیم اثبات ما تمیزتر و خواناتر و به طور حتم به دور از ابهام می‌شود.
 برای شفاف شدن موضوع به دو مثال زیر توجه کنید:
 
@@ -1908,4 +1908,43 @@ $T'$
      پس در نتیجه فرض خلف باطل و حکم اثبات شده است.
     
   
+\freechapter*{تاریخچه}
+
+بهار سال ۱۳۹۹ به دلیل شیوع بیماری کرونا، آموزش دانشگاه‌ها به صورت غیرحضوری درآمد. با این رویداد، ارتباط گروه‌های آموزشی
+با دانشجویان بسیار محدود و انتقال مفاهیم بسیار دشوارتر شد. برخی دروس از طریق رسانه‌هایی ارتباط با دانشجویان را بازسازی کرده و
+به تدریس ادامه دادند؛ اما چطور می‌شد ریاضیات گسسته را از طریق پیام‌رسان‌ها تدریس کرد؟
+یکی از بزرگ‌ترین عوامل یادگیری که از دست رفته بود، ارتباط زنده با دانشجویان و روبرو شدن با اشتباهات آن‌ها در افکار یا نوشتار حین حل مسئله بود.
+اکثر تلاش‌ها برای بازسازی کردن این ارتباط بی‌نتیجه ماند و ترم به همان صورت پایان یافت. حاصل مشاهدات آن زمان این بود که درصد زیادی از اشتباهات
+دانشجویان در دوره‌ها یکسان است چرا که بحث‌هایی که ترم‌های قبل از آن در کلاس‌های حضوری صورت می‌گرفت، در پاسخ‌های آن ترم دانشجویان به شکل
+اشتباهاتی فاحش رصد می‌شد. راهکاری که اندیشیده شد، بازسازی بحث با دانشجویان درباره اشتباهات ذهنی و نوشتاری آن‌ها، با میزانی تاخیر بود؛
+بدین صورت که دانشجویان جدید می‌توانند شاهد بحث و گفتگوی غیر زنده‌ی مدرسین با دانشجویان سابق درس، بر سر پاسخ‌های اشتباهشان باشند و مفاهیم مشترک را
+از این طریق یاد بگیرند.
+
+تابستان سال ۱۳۹۹، کلید شروع آماده‌سازی محتوایی مکتوب، یادآور بحث‌های جلسات حضوری بر سر اشتباهات رایج دانشجویان، توسط
+گروه دستیاران آموزشی این درس زده شد و نسخه‌ی اول این پروژه در انتهای پاییز همان سال به پایان رسید.
+این نسخه که با ساختار «سوال، اشتباهات رایج در پاسخ‌ها، نکات قابل توجه، پاسخ مطلوب» آماده شد، شامل ۲۸ سوال و ۳۳۸ نکته‌ی آموزشی،
+با حجم ۴۰ صفحه ارائه شد.
+
+درصورتی که ایده‌ای برای تکمیل این محتوا دارید یا مایل به کمک برای بهبود آن هستید، حتما با آدرس ایمیل 
+behzad.shayegh@ut.ac.ir
+در ارتباط باشید.
+
+\begin{itemize}
+  \item 
+  نسخه ۱ - پاییز ۱۳۹۹ :
+  \begin{itemize}
+    \item 
+    نویسندگان: سودابه محمدهاشمی و کیمیا محمدطاهری
+    \item 
+    تحت نظارت: بهزاد شایق
+    \item 
+    با تشکر از: یارا کامکار
+  \end{itemize}
+\end{itemize}
+  استاد درس: دکتر سیامک محمدی
+
+
+
+
+
 \end{document}
