last_edit_of_v1

--- a/h2wp.tex
+++ b/h2wp.tex
@@ -7,43 +7,31 @@
 \begin{document}
 \maketitle
 
-هرگاه نویسنده‌ای توانایی درست نوشتن را نداشته باشد در انتقال صحیح تراوشات فکری خود به خواننده ناکام می‌ماند. نوشتار در خصوص مباحث علم ریاضیات گسسته نیز علاوه بر درک درست از مفاهیم، نیاز به دانش «صحیح نوشتن» و روش به تحریر درآوردن مسائل و اثبات‌ها دارد تا بتواند هدف انتقال بی‌ کم و کاست به خواننده را کسب نماید.
+پیشروی در درس ریاضیات گسسته مستلزم نوآوری و ایده‌پردازی زیاد است که
+راهکار‌هایی از جمله ساختاردهی به تفکر در حل مسئله، برای ایجاد این نوآوری در ذهن وجود دارد.
+همچنین لازم به یادآوریست، نوآوری تمام آن چیزی نیست که در این مسیر نیاز می‌شود
+یکی دیگر از ملزمات انکار ناپذیر در ریاضیات گسسته، قدرت بیان درست تفکرات و اثبات درست نتایج است.
+بسیار دیده می‌شود که کسانی راهکار مسائلی را می‌دانند، ولی توانایی انتقال آن به دیگران را ندارند و با توجه به
+زندگی اجتماعی، مفاهیم انتزاعی که برای همیشه در ذهن یک نفر بمانند، ارزشی بیشتر از نیستی ندارند.
+همچنین دیده می‌شود که کسانی می‌پندارند که راهکار مسائلی را می‌دانند و هیچگاه از نقص‌های دیدگاه خود آگاه نمی‌شوند،
+چرا که از الزامات اثبات درستی افکار آگاه نیستند.
 
-چیزی که واقعا اهمیت دارد این است که با درست نوشتن، خواننده درک صحیحی از راه و روش حل مسائل و اثبات‌ها كسب كند و توانایی درک و خلاقیت در کشف روش‌های حل مسائل را در خود ارتقاء بخشد.
-در بیشتر مواقع اثبات مسائل آسان و منطق حل مسائل بسیار دست یافتنی به نظر می‌آید ولی در واقع در زمان نوشتن حل مسائل و اثبات‌ها رویکرد اشتباهی را پیش می‌گیریم.
-به همین خاطر است که ما نیاز داریم یاد بگیریم كه چگونه اثبات‌ها را دنبال کنیم.
-
-هر چند كه رعایت حداقل معیارهای درست نویسی و پیشبرد مرحله به مرحله‌ی حل مسائل و اثبات‌ها با استدلال‌های منطقی، خیال ما را نسبت به درست و معتبر بودن نوشته‌ی خود راحت می‌نماید ولی مطالعه‌ی متون فنی و تعمق در نوشتارهای غنیِ ما را به مرحله‌ای از بلوغ در نویسندگی می‌رساند كه علاوه بر رسیدن به بهترین نتیجه‌ی ممكن، ما را در انتقال صحیح معنا و مفهوم و درك صحیح نوشته بسیار موفق می‌سازد
-و در نهایت زمانی که فرا بگیریم، چگونه با اتكا به استدلال‌های درست اثباتمان را کامل کنیم، به فهم عمیق‌تری از مسائل می‌رسیم.
-
-پایه و بنیاد درست نویسی بسیار آسان است. تنها کافی است که دقت نماییم تا جملات استفاده شده به یکی از اشکال زیر باشد:
-
-\begin{enumerate}
-\item
-خود فرض مسئله باشد.
-\item
-به صورت كاملا شفاف و واضح از جملات قبلی نتیجه شده باشد.
-\item
-درستی آن قبلا اثبات شده باشد.
-\end{enumerate}
-
-در این جزوه تمام سعی و کوشش ما بر این بوده است تا شما را بیشتر با «درست نویسی» و نکاتی که خواننده را به این جهت سوق دهد آشنا کنیم.
-امید است كه فراگیری نكات «درست نویسی» در تمامی مراحل زندگی راهبر و راهنمای شما باشد.
-
-
-\textbf{انواع نکات}
+در این جزوه سعی بر آن می‌شود که با استفاده از مرور اشتباهات رایج در حل مسائل و گوشزد کردن نکات کلیدی، و همچنین ارائه‌ی پاسخ‌های
+ساخت‌یافته و منظم، نحوه‌ی تفکر ساخت‌یافته درباره مسائل آموزش داده شود و در کنار آن، نحوه‌ی بیان و مکتوب کردن قابل اطمینان مطالب
+آموزش داده شود. همچنین تلاش خواهد شد تا جلوه‌ای روشن از اثبات کامل و بی‌عیب و نقص ارائه شود تا خود
+بتوانید از کامل بودن یا نبودن اثبات‌ها و دیدگاه‌های خود آگاه شوید.
 
 در این جزوه با سه دسته نکته مواجه هستیم:
 \begin{enumerate}
-
 \item
 دسته $E$: نکات درست نویسی که رعایت نکردن آن باعث ناقص شدن اثبات و در نتیجه کسر نمره می شود.
 \item
 دسته $N$: نکات درست نویسی که رعایت کردن آن‌ها واجب نیست, امابه خوانایی راه حل, ابهام زدایی, پرهیز از تکرار و جلوگیری از خطا کمک می کنند.
 \item
 دسته $T$: دام های آموزشی و خطاهای رایج در حل سوالات.
-
 \end{enumerate}
+
+به امید سلامتی.
 
 \chapter*{شمارش}
 
@@ -721,6 +709,109 @@ $ x_1 $
 \end{align*}
 پس در کل گزاره فوق درست است.
 
+
+
+
+
+
+
+
+
+
+
+
+\chapter*{
+نکات نوشتار}
+\notes
+\Nnote{n44}
+در حل سوالات توجه کنید هر گزاره، فرمول، اتحاد و... که درستی آن‌ها اثبات شده است  باید منبع معتبر آن ‌ذکر شود‌. این منابع می‌توان اسم عام آن، آدرس سوال و تمرینی که قبلا داده شده، مطالب داخل کلاس، جزوه و... باشد. 
+
+\Enote{n45}
+در طول اثبات توصیه اکید می‌شود از کلمه «بدیهی است» استفاده نکنید. حتی در مسیر یافتن جواب هم در ذهن خود بسپارید هیج چیز بدیهی نیست، یا نیاز به اثبات دارد یا قبلا اثبات شده است یا از اصول و تعاریف پایه است 
+\refnote{n44}.
+به عبارتی برای هر جمله به سوال «چرا؟» پاسخ دهید.
+چرا؟ :)
+چون استفاده از بعضی از جملات اعم از «بدیهی است» و مواردی که اشاره خواهیم کرد در طول اثبات باعث کژفهمی کلیت اثبات یا کامل به نظر رسیدن اثباتی ناقص و یا حتی غلط می‌شود. 
+به عبارت دیگر
+مانند فرایند های منطقی
+\refnote{n20}
+هر جمله باید از جملات قبلی و یا اصول پایه نتیجه گرفته شود.
+
+\Nnote{n338}
+یکی از چراغ خطرهای در طول اثبات استفاده از «و .../و غیره/...» است. این کلمات به خودی خود بد نیستند، اما زمانی که ما می‌توانیم از علایم اختصاری استفاده کنیم اثبات ما تمیزتر و خواناتر و به طور حتم به دور از ابهام می‌شود.
+برای شفاف شدن موضوع به دو مثال زیر توجه کنید:
+
+\begin{enumerate}
+\item
+دنباله «۲و ۴و ۶و ...» را داریم.
+
+«و ...» نشان دهنده چه جملاتی در دنباله است؟
+
+آیا منظور دنباله $a_n =2n $ است؟
+
+یا دنباله $a_n = a_{n-1} + a_{n-2} ,  a_0=2 , a_1=4$ ؟
+
+یا دنباله $ a_n = 2n + (1-n)^3(2-n)^2(3-n) $ ؟ 
+\item
+s
+را در نظر می‌گیریم $ a_1 + a_2 + ... + a_n $. 
+
+زیباتر است بنویسیم :
+$ s = \sum_{i=1}^{n} {a_i} $
+
+\end{enumerate}
+
+\Nnote{n46}
+تا آن‌جا که می‌توانید جملات، عبارات ریاضی و گزاره‌ها را فارسی ننویسید. از گزاره‌های منطقی استفاده کنید یا به شکل عبارات و معادلات ریاضی بنویسید. 
+
+\Enote{n46.5}
+در مباحثی که مدل نوشتاری خاص وجود دارد مثل استقرا، ناوردایی و نظریه اعداد حتما اصول را رعایت کنید.
+
+\Enote{n47}
+از نوشتن عبارت هایی مثل "بهترین حالت این است که" یا "در بدترین حالت داریم که..." پرهیز کنید. توجه کنید که بهترین و بدترین و مفاهیمی از این دست, در ریاضیات معنایی ندارند مگر آن که آن‌ها را تعریف کنید و توضیح بدهید که چرا در نظر گرفتن این حالت به حل مسئله کمک می‌کند.
+
+\Nnote{n48}
+بهتر است در صورتی که در اثبات خود از روش یا ایده مشخص و شناخته شده‌ای استفاده می‌کنید, (مثل ناوردایی - استقرا - برهان خلف - دوگانه شماری و...)آن را ذکر کنید تا دنبال کردن اثبات شما برای خواننده راحت تر بشود و اثبات شما را بهتر متوجه بشود.
+
+\Enote{n49}
+اگر در نوشتن اثبات از رسم شکل استفاده می‌کنید, حذف کردن شکل نباید باعث ناقص شدن اثبات شما بشود, به عبارت دیگر شکل تنها باید به فهم بهتر اثبات کمک کند و نباید مستقیما برای اثبات استفاده شود.
+
+\Enote{n50}
+استفاده از مثال برای فهم بهتر اثبات یک حکم کلی اقدام خیلی خوبی است, اما نباید جایگزین اثبات اصلی بشود.
+
+\Enote{n50.7}
+در طول اثبات به هیچ عنوان به شهود اکتفا نکنید. شهود به هیچ عنوان ارزش ریاضی ندارد.
+
+\Enote{n50.5}
+ همواره دقت نمایید تا جملات استفاده شده به یکی از اشکال زیر باشد:
+\begin{enumerate}
+\item
+خود فرض مسئله باشد.
+\item
+به صورت كاملا شفاف و واضح از جملات قبلی نتیجه شده باشد.
+\item
+درستی آن قبلا اثبات شده باشد.
+\end{enumerate}
+این مهم‌ترین قانون درست‌نویسی بوده و شرط لازم و کافی برای کامل بودن هر اثبات است.
+تمام نکات درست‌نویسی دیگری که در جای‌جای این جزوه گوشزد شده، به نوعی ترجمه‌ی این قانون
+در محیط مسائل مختلف است.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
  
  \chapter*{ناوردایی}
  
@@ -1341,80 +1432,24 @@ $n$
  	 توجه کنید در اثبات‌ها باید با استفاده از گام(ها) و فرض ، حکم را برای همه اعداد طبیعی ثابت کنید.
  
  
-\chapter*{
-نکات نوشتار}
-\notes
-\Nnote{n44}
-در حل سوالات توجه کنید هر گزاره، فرمول، اتحاد و... که درستی آن‌ها اثبات شده است  باید منبع معتبر آن ‌ذکر شود‌. این منابع می‌توان اسم عام آن، آدرس سوال و تمرینی که قبلا داده شده، مطالب داخل کلاس، جزوه و... باشد. 
 
-\Enote{n45}
-در طول اثبات توصیه اکید می‌شود از کلمه «بدیهی است» استفاده نکنید. حتی در مسیر یافتن جواب هم در ذهن خود بسپارید هیج چیز بدیهی نیست، یا نیاز به اثبات دارد یا قبلا اثبات شده است یا از اصول و تعاریف پایه است 
-\refnote{n44}.
-به عبارتی برای هر جمله به سوال «چرا؟» پاسخ دهید.
-چرا؟ :)
-چون استفاده از بعضی از جملات اعم از «بدیهی است» و مواردی که اشاره خواهیم کرد در طول اثبات باعث کژفهمی کلیت اثبات یا کامل به نظر رسیدن اثباتی ناقص و یا حتی غلط می‌شود. 
-به عبارت دیگر
-مانند فرایند های منطقی
-\refnote{n20}
-هر جمله باید از جملات قبلی و یا اصول پایه نتیجه گرفته شود.
+    
 
-\Nnote{n338}
-یکی از چراغ خطرهای در طول اثبات استفاده از «و .../و غیره/...» است. این کلمات به خودی خود بد نیستند، اما زمانی که ما می‌توانیم از علایم اختصاری استفاده کنیم اثبات ما تمیزتر و خواناتر و به طور حتم به دور از ابهام می‌شود.
-برای شفاف شدن موضوع به دو مثال زیر توجه کنید:
 
-\begin{enumerate}
-\item
-دنباله «۲و ۴و ۶و ...» را داریم.
 
-«و ...» نشان دهنده چه جملاتی در دنباله است؟
 
-آیا منظور دنباله $a_n =2n $ است؟
 
-یا دنباله $a_n = a_{n-1} + a_{n-2} ,  a_0=2 , a_1=4$ ؟
 
-یا دنباله $ a_n = 2n + (1-n)^3(2-n)^2(3-n) $ ؟ 
-\item
-s
-را در نظر می‌گیریم $ a_1 + a_2 + ... + a_n $. 
 
-زیباتر است بنویسیم :
-$ s = \sum_{i=1}^{n} {a_i} $
 
-\end{enumerate}
 
-\Nnote{n46}
-تا آن‌جا که می‌توانید جملات، عبارات ریاضی و گزاره‌ها را فارسی ننویسید. از گزاره‌های منطقی استفاده کنید یا به شکل عبارات و معادلات ریاضی بنویسید. 
 
-\Enote{n46.5}
-در مباحثی که مدل نوشتاری خاص وجود دارد مثل استقرا، ناوردایی و نظریه اعداد حتما اصول را رعایت کنید.
 
-\Enote{n47}
-از نوشتن عبارت هایی مثل "بهترین حالت این است که" یا "در بدترین حالت داریم که..." پرهیز کنید. توجه کنید که بهترین و بدترین و مفاهیمی از این دست, در ریاضیات معنایی ندارند مگر آن که آن‌ها را تعریف کنید و توضیح بدهید که چرا در نظر گرفتن این حالت به حل مسئله کمک می‌کند.
 
-\Nnote{n48}
-بهتر است در صورتی که در اثبات خود از روش یا ایده مشخص و شناخته شده‌ای استفاده می‌کنید, (مثل ناوردایی - استقرا - برهان خلف - دوگانه شماری و...)آن را ذکر کنید تا دنبال کردن اثبات شما برای خواننده راحت تر بشود و اثبات شما را بهتر متوجه بشود.
 
-\Enote{n49}
-اگر در نوشتن اثبات از رسم شکل استفاده می‌کنید, حذف کردن شکل نباید باعث ناقص شدن اثبات شما بشود, به عبارت دیگر شکل تنها باید به فهم بهتر اثبات کمک کند و نباید مستقیما برای اثبات استفاده شود.
 
-\Enote{n50}
-استفاده از مثال برای فهم بهتر اثبات یک حکم کلی اقدام خیلی خوبی است, اما نباید جایگزین اثبات اصلی بشود.
 
-\Enote{n50.5}
- همواره دقت نمایید تا جملات استفاده شده به یکی از اشکال زیر باشد:
 
-\begin{enumerate}
-\item
-خود فرض مسئله باشد.
-\item
-به صورت كاملا شفاف و واضح از جملات قبلی نتیجه شده باشد.
-\item
-درستی آن قبلا اثبات شده باشد.
- 	 \end{enumerate}
- 	 
- \Enote{n50.7}
- در طول اثبات به هیچ عنوان به شهود اکتفا نکنید. شهود به هیچ عنوان ارزش ریاضی ندارد.
- 
 \chapter*{گراف}
 
 \question
@@ -1796,7 +1831,6 @@ $P(G,\lambda)=c_0+c_1\lambda+c_2\lambda^2+...$
 $c_0=0$
 .
 
-\chapter*{درخت}
 
 \question
 
@@ -1906,6 +1940,22 @@ $T'$
   که این خلاف فرض و تناقض است.
      
      پس در نتیجه فرض خلف باطل و حکم اثبات شده است.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     
   
 \freechapter*{تاریخچه}
