--- a/h2wp.tex
+++ b/h2wp.tex
@@ -8,27 +8,27 @@
 \maketitle
 
 پیشروی در درس ریاضیات گسسته مستلزم نوآوری و ایده‌پردازی زیاد است که
-راهکار‌هایی از جمله ساختاردهی به تفکر در حل مسئله، برای ایجاد این نوآوری در ذهن وجود دارد.
-همچنین لازم به یادآوریست، نوآوری تمام آن چیزی نیست که در این مسیر نیاز می‌شود
+راهکار‌هایی از جمله ساختاردهی به تفکر در حل مسئله برای ایجاد این نوآوری در ذهن وجود دارد.
+همچنین لازم به یادآوری است که نوآوری تمام آن چیزی نیست که در این مسیر نیاز می‌شود.
 یکی دیگر از ملزمات انکار ناپذیر در ریاضیات گسسته، قدرت بیان درست تفکرات و اثبات درست نتایج است.
 بسیار دیده می‌شود که کسانی راهکار مسائلی را می‌دانند، ولی توانایی انتقال آن به دیگران را ندارند و با توجه به
-زندگی اجتماعی، مفاهیم انتزاعی که برای همیشه در ذهن یک نفر بمانند، ارزشی بیشتر از نیستی ندارند.
-همچنین دیده می‌شود که کسانی می‌پندارند که راهکار مسائلی را می‌دانند و هیچگاه از نقص‌های دیدگاه خود آگاه نمی‌شوند،
+زندگی اجتماعی، مفاهیم انتزاعی که برای همیشه در ذهن یک نفر بمانند، تفاوتی با عدم وجود ندارند.
+همچنین دیده شده است کسانی می‌پندارند که راهکار مسائلی را می‌دانند و هیچگاه از نقص‌های دیدگاه خود آگاه نمی‌شوند؛
 چرا که از الزامات اثبات درستی افکار آگاه نیستند.
 
-در این جزوه سعی بر آن می‌شود که با استفاده از مرور اشتباهات رایج در حل مسائل و گوشزد کردن نکات کلیدی، و همچنین ارائه‌ی پاسخ‌های
-ساخت‌یافته و منظم، نحوه‌ی تفکر ساخت‌یافته درباره مسائل آموزش داده شود و در کنار آن، نحوه‌ی بیان و مکتوب کردن قابل اطمینان مطالب
-آموزش داده شود. همچنین تلاش خواهد شد تا جلوه‌ای روشن از اثبات کامل و بی‌عیب و نقص ارائه شود تا خود
+در این جزوه سعی بر آن می‌شود که با استفاده از مرور اشتباهات رایج در حل مسائل و گوشزد کردن نکات کلیدی، همچنین ارائه‌ی پاسخ‌های
+ساخت‌یافته و منظم، نحوه‌ی تفکر ساخت‌یافته درباره مسائل آموزش داده شود. در کنار آن، نحوه‌ی بیان و مکتوب کردن قابل اطمینان مطالب
+نیز جزو اهداف قرار می‌گیرد. همچنین تلاش خواهد شد تا جلوه‌ای روشن از اثبات کامل و بی‌عیب و نقص ارائه شود تا خود
 بتوانید از کامل بودن یا نبودن اثبات‌ها و دیدگاه‌های خود آگاه شوید.
 
 در این جزوه با سه دسته نکته مواجه هستیم:
 \begin{enumerate}
 \item
-دسته $E$: نکات درست نویسی که رعایت نکردن آن باعث ناقص شدن اثبات و در نتیجه کسر نمره می شود.
+دسته $E$ (به معنای $Essential$): نکات درست نویسی که رعایت نکردن آن باعث ناقص شدن اثبات و در نتیجه کسر نمره می شود.
 \item
-دسته $N$: نکات درست نویسی که رعایت کردن آن‌ها واجب نیست, امابه خوانایی راه حل, ابهام زدایی, پرهیز از تکرار و جلوگیری از خطا کمک می کنند.
+دسته $N$ (به معنای $Non-Essential$): نکات درست نویسی که رعایت کردن آن‌ها واجب نیست, امابه خوانایی راه حل, ابهام زدایی, پرهیز از تکرار و جلوگیری از خطا کمک می کنند.
 \item
-دسته $T$: دام های آموزشی و خطاهای رایج در حل سوالات.
+دسته $T$ (به معنای $Trap$): دام های آموزشی و خطاهای رایج در حل سوالات.
 \end{enumerate}
 
 به امید سلامتی.
@@ -1960,39 +1960,58 @@ $T'$
   
 \freechapter*{تاریخچه}
 
-بهار سال ۱۳۹۹ به دلیل شیوع بیماری کرونا، آموزش دانشگاه‌ها به صورت غیرحضوری درآمد. با این رویداد، ارتباط گروه‌های آموزشی
-با دانشجویان بسیار محدود و انتقال مفاهیم بسیار دشوارتر شد. برخی دروس از طریق رسانه‌هایی ارتباط با دانشجویان را بازسازی کرده و
+یکی از بزرگ‌ترین عوامل آموزش درس ریاضیات گسسته، ارتباط زنده با دانشجویان و روبرو شدن
+با اشتباهات آن‌ها در افکار یا نوشتار حین حل مسئله است.
+راه‌اندازی این جریان از مشکلات و نگرانی‌های همیشگی آموزش این درس بوده و هست.
+همواره تلاش گروه آموزشی این درس بر آن بوده که با تشویق دانشجویان به حضور در این بحث‌ها و
+ایجاد فضای مناسب برای روبرو شدن با این جنجال‌ها، جای این جریان تاثیر‌گذار در ارائه درس را پر کنند؛
+که گاهی موفق بودند و گاهی نه.
+
+بهار سال ۱۳۹۹ به دلیل شیوع بیماری کرونا، آموزش دانشگاه‌ها به صورت غیرحضوری درآمد. نتیجه آن بود که ارتباط گروه‌های آموزشی
+با دانشجویان بسیار محدود و انتقال مفاهیم بسیار دشوارتر شد.
+برخی دروس از طریق رسانه‌ها، ارتباط با دانشجویان را بازسازی کرده و
 به تدریس ادامه دادند؛ اما چطور می‌شد ریاضیات گسسته را از طریق پیام‌رسان‌ها تدریس کرد؟
-یکی از بزرگ‌ترین عوامل یادگیری که از دست رفته بود، ارتباط زنده با دانشجویان و روبرو شدن با اشتباهات آن‌ها در افکار یا نوشتار حین حل مسئله بود.
-اکثر تلاش‌ها برای بازسازی کردن این ارتباط بی‌نتیجه ماند و ترم به همان صورت پایان یافت. حاصل مشاهدات آن زمان این بود که درصد زیادی از اشتباهات
-دانشجویان در دوره‌ها یکسان است چرا که بحث‌هایی که ترم‌های قبل از آن در کلاس‌های حضوری صورت می‌گرفت، در پاسخ‌های آن ترم دانشجویان به شکل
-اشتباهاتی فاحش رصد می‌شد. راهکاری که اندیشیده شد، بازسازی بحث با دانشجویان درباره اشتباهات ذهنی و نوشتاری آن‌ها، با میزانی تاخیر بود؛
-بدین صورت که دانشجویان جدید می‌توانند شاهد بحث و گفتگوی غیر زنده‌ی مدرسین با دانشجویان سابق درس، بر سر پاسخ‌های اشتباهشان باشند و مفاهیم مشترک را
+حاصل مشاهدات آن زمان این بود که درصد زیادی از اشتباهات دانشجویان در دوره‌ها یکسان است؛
+چرا که بحث‌هایی که ترم‌های قبل از آن در کلاس‌های حضوری صورت می‌گرفت، در پاسخ‌های دانشجویان آن ترم،
+به شکل اشتباهاتی فاحش رصد می‌شد.
+راهکاری که اندیشیده شد،
+بازسازی بحث با دانشجویان درباره اشتباهات ذهنی و نوشتاری آن‌ها، به صورت مکتوب برای دوره‌های بعد بود؛
+بدین صورت که دانشجویان جدید می‌توانند شاهد بحث و گفتگوی غیر زنده‌ی مدرسین با دانشجویان سابق درس،
+بر سر پاسخ‌های اشتباهشان باشند و مفاهیم مشترک را
 از این طریق یاد بگیرند.
 
 تابستان سال ۱۳۹۹، کلید شروع آماده‌سازی محتوایی مکتوب، یادآور بحث‌های جلسات حضوری بر سر اشتباهات رایج دانشجویان، توسط
-گروه دستیاران آموزشی این درس زده شد و نسخه‌ی اول این پروژه در انتهای پاییز همان سال به پایان رسید.
+گروه دستیاران آموزشی این درس زده شد. نسخه‌ی اول این محتوا در انتهای پاییز همان سال به پایان رسید.
 این نسخه که با ساختار «سوال، اشتباهات رایج در پاسخ‌ها، نکات قابل توجه، پاسخ مطلوب» آماده شد، شامل ۲۸ سوال و ۶۰ نکته‌ی آموزشی،
 با حجم ۴۰ صفحه ارائه شد.
 
-درصورتی که ایده‌ای برای تکمیل این محتوا دارید یا مایل به کمک برای بهبود آن هستید، حتما با آدرس ایمیل 
-behzad.shayegh@ut.ac.ir
-در ارتباط باشید.
-
 \begin{itemize}
   \item 
-  نسخه ۱ - پاییز ۱۳۹۹ :
+  نسخه ۱ - پاییز ۱۳۹۹
   \begin{itemize}
     \item 
-    نویسندگان: سودابه محمدهاشمی و کیمیا محمدطاهری
+    نویسندگان: 
+    \href{mailto:s.mhashemi221@gmail.com?subject=[DM Proof Strategies]}{سودابه محمدهاشمی}
+    و 
+    \href{mailto:s.k.m.taheri@ut.ac.ir?subject=[DM Proof Strategies]}{کیمیا محمدطاهری}
     \item 
-    تحت نظارت: بهزاد شایق
+    تحت نظارت
+    \href{mailto:behzad.shayegh@ut.ac.ir?subject=[DM Proof Strategies]}{بهزاد شایق}
     \item 
-    با تشکر از: یارا کامکار
+    با تشکر از
+    \href{mailto:ykamkar99@gmail.com?subject=[DM Proof Strategies]}{یارا کامکار}
+    \item 
+    استاد درس: 
+    \href{mailto:smohamadi@ut.ac.ir?subject=[DM Proof Strategies]}{دکتر سیامک محمدی}
   \end{itemize}
 \end{itemize}
-  استاد درس: دکتر سیامک محمدی
 
+درصورتی که ایده‌ای برای تکمیل این محتوا دارید یا مایل به کمک برای بهبود آن هستید، حتما با ما
+(
+از طریق درگاه ایمیل درس به نشانی
+\href{mailto:ut.discretemathematics@gmail.com?subject=[DM Proof Strategies]}{\textit{ut.discretemathematics@gmail.com}}
+)
+در ارتباط باشید.
 
 
 
