Last Edit On History V1

--- a/h2wp.tex
+++ b/h2wp.tex
@@ -24,11 +24,11 @@
 در این جزوه با سه دسته نکته مواجه هستیم:
 \begin{enumerate}
 \item
-دسته $E$ (به معنای $Essential$): نکات درست نویسی که رعایت نکردن آن باعث ناقص شدن اثبات و در نتیجه کسر نمره می شود.
+دسته $E$ \footnote{به معنای $Essential$}: نکات درست نویسی که رعایت نکردن آن باعث ناقص شدن اثبات و در نتیجه کسر نمره می شود.
 \item
-دسته $N$ (به معنای $Non-Essential$): نکات درست نویسی که رعایت کردن آن‌ها واجب نیست, امابه خوانایی راه حل, ابهام زدایی, پرهیز از تکرار و جلوگیری از خطا کمک می کنند.
+دسته $N$ \footnote{به معنای $Non-Essential$}: نکات درست نویسی که رعایت کردن آن‌ها واجب نیست, امابه خوانایی راه حل, ابهام زدایی, پرهیز از تکرار و جلوگیری از خطا کمک می کنند.
 \item
-دسته $T$ (به معنای $Trap$): دام های آموزشی و خطاهای رایج در حل سوالات.
+دسته $T$ \footnote{به معنای $Trap$}: دام های آموزشی و خطاهای رایج در حل سوالات.
 \end{enumerate}
 
 به امید سلامتی.
@@ -1963,9 +1963,8 @@ $T'$
 یکی از بزرگ‌ترین عوامل آموزش درس ریاضیات گسسته، ارتباط زنده با دانشجویان و روبرو شدن
 با اشتباهات آن‌ها در افکار یا نوشتار حین حل مسئله است.
 راه‌اندازی این جریان از مشکلات و نگرانی‌های همیشگی آموزش این درس بوده و هست.
-همواره تلاش گروه آموزشی این درس بر آن بوده که با تشویق دانشجویان به حضور در این بحث‌ها و
-ایجاد فضای مناسب برای روبرو شدن با این جنجال‌ها، جای این جریان تاثیر‌گذار در ارائه درس را پر کنند؛
-که گاهی موفق بودند و گاهی نه.
+همواره تلاش گروه آموزشی این درس بر آن است که با تشویق دانشجویان به حضور در این بحث‌ها و
+ایجاد فضای مناسب برای روبرو شدن با این جنجال‌ها، جای این جریان تاثیر‌گذار در ارائه درس را پر کنند.
 
 بهار سال ۱۳۹۹ به دلیل شیوع بیماری کرونا، آموزش دانشگاه‌ها به صورت غیرحضوری درآمد. نتیجه آن بود که ارتباط گروه‌های آموزشی
 با دانشجویان بسیار محدود و انتقال مفاهیم بسیار دشوارتر شد.
@@ -1991,27 +1990,31 @@ $T'$
   \begin{itemize}
     \item 
     نویسندگان: 
-    \href{mailto:s.mhashemi221@gmail.com?subject=[DM Proof Strategies]}{سودابه محمدهاشمی}
+    \href{mailto:s.mhashemi221@gmail.com?subject=[DM Proof Strategies]}{سودابه محمدهاشمی \ExternalLink}
     و 
-    \href{mailto:s.k.m.taheri@ut.ac.ir?subject=[DM Proof Strategies]}{کیمیا محمدطاهری}
+    \href{mailto:k.m.taheri@ut.ac.ir?subject=[DM Proof Strategies]}{کیمیا محمدطاهری \ExternalLink}
     \item 
     تحت نظارت
-    \href{mailto:behzad.shayegh@ut.ac.ir?subject=[DM Proof Strategies]}{بهزاد شایق}
+    \href{mailto:behzad.shayegh@ut.ac.ir?subject=[DM Proof Strategies]}{بهزاد شایق \ExternalLink}
     \item 
     با تشکر از
-    \href{mailto:ykamkar99@gmail.com?subject=[DM Proof Strategies]}{یارا کامکار}
+    \href{mailto:ykamkar99@gmail.com?subject=[DM Proof Strategies]}{یارا کامکار \ExternalLink}
     \item 
     استاد درس: 
-    \href{mailto:smohamadi@ut.ac.ir?subject=[DM Proof Strategies]}{دکتر سیامک محمدی}
+    \href{mailto:smohamadi@ut.ac.ir?subject=[DM Proof Strategies]}{دکتر سیامک محمدی \ExternalLink}
   \end{itemize}
 \end{itemize}
 
-درصورتی که ایده‌ای برای تکمیل این محتوا دارید یا مایل به کمک برای بهبود آن هستید، حتما با ما
-(
-از طریق درگاه ایمیل درس به نشانی
-\href{mailto:ut.discretemathematics@gmail.com?subject=[DM Proof Strategies]}{\textit{ut.discretemathematics@gmail.com}}
-)
-در ارتباط باشید.
+بهبود مستمر همواره در رأس کار گروه دستیاران آموزشی درس ریاضیات گسسته بوده است. 
+توسعه این محتوا، داوطلبانه و بی‌چشم‌داشت است و از هرگونه همکاری استقبال به عمل می‌آید.
+بسیار خرسند می‌شویم که از نظرات، انتقادات و پیشنهادات شما جهت بهبود این محتوا بهره بگیریم.
+راه رسمی ارتباط با گروه دستیاران آموزشی،
+\href{mailto:ut.discretemathematics@gmail.com?subject=[DM Proof Strategies]}{پست الکترونیکی درس}
+\footnote{\href{mailto:ut.discretemathematics@gmail.com?subject=[DM Proof Strategies]}{\textit{ut.discretemathematics@gmail.com}}}
+است.
+
+با آرزوی موفقیت سرشار
+
 
 
 
