rename to DMMDM

--- a/DMMDM.tex
+++ b/DMMDM.tex
@@ -1900,7 +1900,7 @@ $w$
 \Enote{n335}
   حالت 
   $n=3$
-  بررسی نشده است.
+  بررسی نشده است..
 \Nnote{n336}
 بهتر بود دلیل رسیدن به عبارت $dis(T^\prime)$
 ذکر شود.
