rename to DMMDM

--- a/DMMDM.tex
+++ b/DMMDM.tex
@@ -1,7 +1,7 @@
 \documentclass[11pt,largemargins]{DMMDM}
 
 \newcommand{\eventclass}{ریاضیات گسسته}
-\newcommand{\eventtype}{افکار سازگار ، نوشتار نابکار}
+\newcommand{\eventtype}{در ریاضیات گسسته اشتباه نکنید.}
 \newcommand{\eventcntrbs}{دانشکده برق و کامپیوتر دانشگاه تهران}
 
 \begin{document}
