--- a/CMDM.tex
+++ b/CMDM.tex
@@ -1287,7 +1287,7 @@ $n$
 پایه ها:
 
 
-   {\hspace*{5cm}\includegraphics[height=5cm]{Graphw.jpg}}    
+   {\hspace*{5cm}\includegraphics[height=5cm]{pictures/Graphw.jpg}}    
    
  
    $G_{n}$ را از روی 
@@ -1299,7 +1299,7 @@ $n$
      $x$
       را به این صورت به مجموعه اضافه می‌کنیم:
     
-       {\hspace*{6cm}\includegraphics[height=2cm]{Graph2.jpg}}    
+       {\hspace*{6cm}\includegraphics[height=2cm]{pictures/Graph2.jpg}}    
        
     تمام مسیر‌های
     $xj, xi, jx, ix, ij$ به طول حداکثر ۲ موجودند، این کار را برای تمام جفت راس‌ها انجام می‌دهیم. بنابراین تمام مسیر‌ها به طول حداکثر ۲ موجودند، راس $x$ به تمام راس‌ها یال دارد، پس به گراف دلخواه $G_{n}$ رسیدیم.
@@ -1317,7 +1317,7 @@ $n$
 پایه استقرا:
 
 
-   {\hspace*{5cm}\includegraphics[height=5cm]{Graph1.jpg}}    
+   {\hspace*{5cm}\includegraphics[height=5cm]{pictures/Graph1.jpg}}    
    
    برای $n>6$ ما دو حالت داریم: $\; \; \; \; \; \;$ حالت اول $n$ زوج
    .$\; \; \; \; \; \;$
@@ -1333,14 +1333,14 @@ $n$
       را به این صورت به مجموعه اضافه می‌کنیم:
 
     
-       {\hspace*{6cm}\includegraphics[height=2cm]{Graph2.jpg}}    
+       {\hspace*{6cm}\includegraphics[height=2cm]{pictures/Graph2.jpg}}    
        
     تمام مسیر‌های
     $xj, xi, jx, ix, ij$ به طول حداکثر ۲ موجودند، این کار را برای تمام جفت راس‌ها انجام می‌دهیم. بنابراین تمام مسیر‌ها به طول حداکثر ۲ موجودند، راس $x$ به تمام راس‌ها یال دارد، پس به گراف دلخواه $G_{n}$ رسیدیم.
     
     ب) $n$ زوج باشد. در این حالت $G_{n}$ را از $G_{n-2}$ می‌سازیم. دو راس جدید $x, y$ را بهم متصل می‌کنیم(از $x$ به سمت $y$) حال به ازای هر راس $i$ در $G_{n-2}$ آن را به این صورت به $x$ به $y$ متصل می‌کنیم.
     
-        {\hspace*{6cm}\includegraphics[height=2cm]{Graph3.jpg}}      
+        {\hspace*{6cm}\includegraphics[height=2cm]{pictures/Graph3.jpg}}      
     
     تمامی مسیر‌های $iy, ix, yx, yi, xi, xy$ به طول حداکثر ۲ موجود هستند چون این کار را برای تمام راس‌های $G_{n-2}$ انجام دادیم پس تمام مسیرها به طول حداکثر ۲ موجودند و راس‌ها جدید $y, x$ به تمام راس‌ها یال دارند، پس گراف دلخواه $G_{n}$ را ساختیم.
     
@@ -1493,14 +1493,14 @@ $n$
     
     
     
-    \includegraphics[width=15cm, height=3.5cm]{1.png}
+    \includegraphics[width=15cm, height=3.5cm]{pictures/1.png}
    
    
     سپس اثبات می‎کنیم که اگر یال برشی داشته باشیم، رأس برشی داریم.
     
     اگر u یال برشی باشد، می‌توانیم گراف را مانند شکل زیر رسم کنیم و چون یال u برشی است، بنابراین به جز u یال دیگری از رأس a (یک سر یال u در یک مؤلفه) به مؤلفه دیگر وجود ندارد. بنابراین رأس a نیز برشی است.
     
-    \leftline{\includegraphics[width=3.3cm, height=2cm]{2.png}}
+    \leftline{\includegraphics[width=3.3cm, height=2cm]{pictures/2.png}}
     
     \question
     
@@ -1524,7 +1524,7 @@ $n$
     پایه: 3 = k . رأس v را در نظر بگیرید. اگر رئوسی که به v یال دارند را در مجموعه A و رئوسی که v به آن‌ها یال دارد را در مجموعه B قرار دهیم، با توجه به این که گراف قویاً همبند است، مجموعه‌های A و B تهی نیستند و رأس w در B وجود دارد که به رأس u در A یال دارد. بنابراین رئوس w و u و v دور به طول 3 تشکیل می‌دهند.
     
     
-    \leftline{\includegraphics[width=5.4cm, height=2.4cm]{4.png}} 
+    \leftline{\includegraphics[width=5.4cm, height=2.4cm]{pictures/4.png}} 
     
     فرض: دور به طول k داریم.
     
@@ -1539,7 +1539,7 @@ $n$
     
    
    
-    \leftline{\includegraphics[width=6cm, height=3.2cm]{5.png}}
+    \leftline{\includegraphics[width=6cm, height=3.2cm]{pictures/5.png}}
 
 
     \question
@@ -1716,7 +1716,7 @@ ${n-2\choose 2}$
 \solution
 دو دور همیلتونی به شکل زیر است:
 
-\leftline{\includegraphics[width=10.4cm, height=4.4cm]{8.jpg}} 
+\leftline{\includegraphics[width=10.4cm, height=4.4cm]{pictures/8.jpg}} 
 \notes
 
 \refnote{n49}
@@ -1840,7 +1840,7 @@ $c_0=0$
 \solution
 در حالت کلی‌تر برای جدول $ n \times n $ سوال را حل می‌کنیم. یک جدول $ 2 \times 2 $ را در نظر بگیرید. واضح است برای این، ۲ درخت داریم. حال اگر جدول $ 3 \times 3 $ داشته باشیم، مثل موارد زیر ۱۶ درخت متفاوت می‌توان کشید.
 
-\leftline{\includegraphics[width=8cm, height=3.5cm]{tree_q1.jpg}}
+\leftline{\includegraphics[width=8cm, height=3.5cm]{pictures/tree_q1.jpg}}
 
 $ 2^{1 \times 1} = 2 $
 
