send CMDM.cls to template folder

--- a/CMDM.tex
+++ b/CMDM.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt,largemargins]{CMDM}
+\documentclass[11pt,largemargins]{template/CMDM}
 
 \newcommand{\eventclass}{ریاضیات گسسته}
 \newcommand{\eventtype}{اشتباهات رایج در ریاضیات گسسته}
